# clustering

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitlint  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
app/: main.cpp
benchmark/: .clang-tidy  dbscan_benchmark.cpp  gemm_benchmark.cpp  kdtree_benchmark.cpp  kmeans_benchmark.cpp  nn_descent_benchmark.cpp
benchmark_results_ref/: kmeans_compare.json  results.json
cmake/: CPM.cmake  CitorDep.cmake  DocsDep.cmake  GTestDep.cmake  ThreadPoolDep.cmake  Tooling.cmake
docs/: Doxyfile.in  custom.css  header.html  mainpage.md
include/clustering/: always_assert.h  dbscan.h  hdbscan.h  kdtree.h  kmeans.h  ndarray.h  ndarray_range.h  thread_pool.h
include/clustering/hdbscan/: mst_backend.h  mst_output.h
include/clustering/hdbscan/detail/: boruvka_traversal.h  condensed_tree.h  eom_extract.h  glosh.h  leaf_extract.h  single_linkage.h
include/clustering/hdbscan/policy/: auto_mst_backend.h  boruvka_mst_backend.h  nn_descent_mst_backend.h  prim_mst_backend.h
include/clustering/index/: auto_range_index.h  brute_force_pairwise.h  kdtree.h  nn_descent.h  range_query.h
include/clustering/index/nn_descent/detail/: join_step.h  neighbor_heap.h  rp_tree_init.h
include/clustering/kmeans/detail/: convergence.h  dispatch.h  empty_cluster.h  lloyd_fused.h  seed_afkmc2.h  seed_greedy_kmpp.h  solver.h
include/clustering/kmeans/policy/: afkmc2_seeder.h  auto_seeder.h  greedy_kmpp_seeder.h  lloyd.h  lloyd_fused_gemm.h  seeder.h
include/clustering/math/: aabb.h  accumulate_by_label.h  centroid_shift.h  defaults.h  distance.h  dsu.h  equality.h  gemm.h  gemm_plan.h  heap.h  pairwise.h  pairwise_argmin.h  reduce.h  rng.h  thread.h
include/clustering/math/detail/: aabb_gap_avx2.h  avx2_helpers.h  avx2_reductions.h  bounded_max_heap.h  coherence_cache.h  columnwise_reduce_avx2.h  distance_avx2.h  gemm_kernel_avx2_f32.h  gemm_kernel_avx2_f32_argmin.h  gemm_kernel_avx2_f32_threshold.h  gemm_kernel_avx2_i16_threshold.h  gemm_kernel_scalar.h  gemm_outer.h  gemm_outer_prepacked.h  gemm_pack.h  heap_ops.h  inverse_cdf_blocks.h  kmpp_score_avx2.h  matrix_desc.h  pairwise_argmin_outer.h  pairwise_threshold_outer.h  pairwise_threshold_outer_i16.h  radius_scan.h  reference_gemm.h  sq_distances_block.h  sq_distances_tile.h  top_k_neighbors.h
include/clustering/memory/: linear_alloc.h  new_alloc.h
pybench/: alignment.py  cli.py  plot.py  recipe.py  runner.py
pybench/charts/: data.py  figure.py  filenames.py  gates.py  label_align.py  labels_io.py  meta.py  results_io.py  vis.py
pybench/recipes/: __init__.py  dbscan.py  hdbscan.py  kmeans.py
python/: CMakeLists.txt
python/src/: _bindings.cpp  ndarray_adapter.h
scripts/: check-doxygen-build.sh  check-doxygen-chips.sh
tests/: CMakeLists.txt  dbscan_test.cpp  gemm_avx2_f32_test.cpp  gemm_backend_dispatch_test.cpp  gemm_mutability_death_test.cpp  gemm_plan_test.cpp  gemm_public_test.cpp  gemm_scalar_test.cpp  gemm_threading_test.cpp  hdbscan_auto_backend_test.cpp  hdbscan_boruvka_mst_test.cpp  hdbscan_glosh_test.cpp  hdbscan_nn_descent_mst_test.cpp  hdbscan_prim_mst_test.cpp  hdbscan_test.cpp  kdtree_bounds_test.cpp  kdtree_knn_test.cpp  kdtree_test.cpp  kmeans_alloc_counter_test.cpp  kmeans_determinism_test.cpp  kmeans_lloyd_test.cpp  kmeans_seeder_dispatch_test.cpp  kmeans_seeder_test.cpp  kmeans_test.cpp  math_aabb_test.cpp  math_accumulate_by_label_test.cpp  math_bounded_max_heap_test.cpp  math_centroid_shift_test.cpp  math_distance_test.cpp  math_dsu_test.cpp  math_equality_test.cpp  math_heap_test.cpp  math_inverse_cdf_blocks_test.cpp  math_pairwise_argmin_test.cpp  math_pairwise_test.cpp  math_pairwise_threshold_test.cpp  math_reduce_test.cpp  math_rng_test.cpp  math_sq_distances_block_test.cpp  math_thread_test.cpp  (+4 more)
tests/python/: test_hdbscan.py  test_kmeans_binding.py  test_ndarray_adapter.py
tests/python/pybench/: test_alignment.py  test_charts_data.py  test_charts_figure.py  test_charts_vis.py  test_cli_smoke.py  test_filenames.py  test_gates.py  test_label_align.py  test_labels_io.py  test_recipe_defaults.py  test_results_io.py  test_runner_data_and_eps.py  test_runner_label_capture.py
tools/: bench.sh  gemm_bench.sh  make_dbscan_fixture.py
