[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "clustering"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
]

[project.scripts]
benchmark = "pybench.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.15",
    "commitizen>=4.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "v$version"
version_scheme = "semver"
update_changelog_on_bump = false

[tool.scikit-build]
cmake.source-dir = "python"
cmake.build-type = "Release"
wheel.packages = ["pybench"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "20"
