[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "clustering"
version = "0.7.7"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy>=1.12",
    "scikit-learn",
    "matplotlib",
    "memray>=1.14",
    "threadpoolctl>=3.0",
    "kneed>=0.8",
]

[project.scripts]
benchmark = "pybench.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.15",
    "commitizen>=4.0",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
# importlib avoids a package-name collision between the source `pybench`
# package and the `tests/python/pybench/` test subpackage.
addopts = "--import-mode=importlib"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.7"
tag_format = "v$version"
version_scheme = "semver"
update_changelog_on_bump = false
bump_message = "bump: $current_version -> $new_version"
version_files = [
    "pyproject.toml:^version",
    "README.md:GIT_TAG v",
]

[tool.scikit-build]
cmake.source-dir = "python"
cmake.build-type = "Release"
wheel.packages = ["pybench"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "20"
