add_executable(
    clustering_tests
    kdtree_test.cpp
    kdtree_knn_test.cpp
    kdtree_bounds_test.cpp
    dbscan_test.cpp
    ndarray_test.cpp
    ndarray_integer_allowlist_test.cpp
    matrix_desc_test.cpp
    math_bounded_max_heap_test.cpp
    math_centroid_shift_test.cpp
    math_distance_test.cpp
    math_dsu_test.cpp
    math_equality_test.cpp
    math_heap_test.cpp
    math_pairwise_test.cpp
    math_pairwise_argmin_test.cpp
    math_pairwise_threshold_test.cpp
    math_reduce_test.cpp
    math_rng_test.cpp
    math_thread_test.cpp
    gemm_scalar_test.cpp
    gemm_avx2_f32_test.cpp
    gemm_plan_test.cpp
    gemm_public_test.cpp
    gemm_mutability_death_test.cpp
    gemm_backend_dispatch_test.cpp
    gemm_threading_test.cpp
    hdbscan_test.cpp
    hdbscan_prim_mst_test.cpp
    hdbscan_boruvka_mst_test.cpp
    nn_descent_test.cpp
    kmeans_lloyd_test.cpp
    kmeans_seeder_dispatch_test.cpp
    kmeans_alloc_counter_test.cpp
    kmeans_determinism_test.cpp
    kmeans_seeder_test.cpp
)
target_link_libraries(
    clustering_tests
    PRIVATE clustering_header_lib clustering_warnings GTest::gtest_main
)
clustering_enable_tidy(clustering_tests)

include(GoogleTest)
gtest_discover_tests(clustering_tests)
